--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,17 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Google test
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+# Google test
+
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
 
@@ -36,3 +47,27 @@ target_link_libraries(kutu PRIVATE Qt${QT_VERSION_MAJOR}::Widgets fmt spdlog)
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(kutu)
 endif()
+
+
+# Test
+enable_testing()
+
+add_executable(
+  test_computer
+  test_computer.cpp
+  parser.h parser.cpp
+  computer.h computer.cpp
+)
+target_link_libraries(
+  test_computer
+  PRIVATE
+  GTest::gtest_main
+  Qt${QT_VERSION_MAJOR}::Widgets
+  fmt
+  spdlog
+)
+
+include(GoogleTest)
+gtest_discover_tests(test_computer)
+# Test
+
