--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,8 @@ set(PROJECT_SOURCES
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(kutu MANUAL_FINALIZATION ${PROJECT_SOURCES} )
 else()
-    add_executable(kutu ${PROJECT_SOURCES})
+    add_executable(kutu ${PROJECT_SOURCES}
+      highlighter.h highlighter.cpp)
 endif()
 
 target_compile_options(kutu PRIVATE -Werror)
